# cpp-project-template

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  cpplint.cfg  vcpkg.json
.github/workflows/: build-linux.yml  build-windows-vs2022.yml
cmake/: helpers.cmake  sanitize.cmake  static_analysis.cmake  strip.cmake
cmake/presets/: linux.clang.json  linux.gcc.json  windows.cl.json  windows.clangcl.json  windows.mingw.clang.json  windows.mingw.gcc.json  windows.msys2.json  windows.vs2022.json
cmake/presets/base/: base.json  linux.json  windows.json
src/: main.cpp
test/compiler/: CMakeLists.txt  compiler.cpp
